[package]
name = "lis331hh"
description = "An embedded-hal driver for the LIS331HH accelerometer that implements the generic accelerometer trait"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = [
    "Benjamin Bergman <ben@benbergman.ca>",
    "Paul Sajna <sajattack@gmail.com>",
    "Jesse Braham <jesse@beta7.io>",
    "Folkert de Vries <folkert@folkertdev.nl>",
    "Maciej Małecki <me@mmalecki>"
]
keywords = [
    "embedded-hal-driver",
    "accelerometer",
]
repository = "https://github.com/mmalecki/lis331hh-rs"
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
accelerometer = "~0.12"
embedded-hal = "~0.2"
num_enum = { version = "~0.5", default-features = false }

[dev-dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-hal = "0.36.0"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
